Address SonarCloud issues across main and test sources
Resolve the open issues reported on the new-code period:

Main code:
- BlockLimitsListener: replace Guava Optional copper fields with nullable
  Material (S4738); refactor fixMaterial to a lookup map and extract
  loadLimits helpers to cut cognitive complexity (S3776); lazy-supplier
  logging (S2629); drop unused handleBreak param (S1172).
- EntityLimitListener: constants for duplicated literals (S1192); extract
  assignment from condition (S1121); remove always-false getHand() null
  check (S2583); single Optional resolve before get (S3655).
- Stream.toList() over collect(toList()) (S6204) in Limits,
  RecountCalculator, OffsetCommand; rename shadowing locals (S1117);
  switch->if in CalcCommand/RecountCommand (S1301); CalcCommand island
  field -> local (S1450); drop unused OffsetCommand alias param (S1172);
  remove redundant lambda braces in JoinListener (S1602).

Tests:
- Drop redundant public modifier on 181 JUnit 5 methods (S5786).
- Replace deprecated PlayerJoinEvent(String)/BlockMultiPlaceEvent ctors
  and PlayerInteractEvent.isCancelled() (S5738/S1874).
- Parameterize the four invalid-perm-format tests (S5976); method
  reference (S1612); assertNotEquals (S5785); drop useless eq() matchers
  (S6068); remove unused imports/vars/throws/commented code and add a
  missing assertion (S1128/S1481/S1854/S1130/S125/S2699).

All 243 tests pass.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>